fixed imagebox overflow.

--- a/src/client/views/nodes/ImageBox.scss
+++ b/src/client/views/nodes/ImageBox.scss
@@ -65,6 +65,7 @@
     display:flex;
     align-items: center;
     height:100%;
+    overflow:hidden;
     .imageBox-fadeBlocker {
         width:100%;
         height:100%;
